Adds Jasmin tests

--- a/build.gradle
+++ b/build.gradle
@@ -75,3 +75,7 @@ task copyJar() {
     }
 }
 build.dependsOn copyJar
+
+dependencies {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+}
